alicia: sync backlog and CI, document smoke tests, add local launcher

--- a/Alicia/13-pr-mvp-018-020.md
+++ b/Alicia/13-pr-mvp-018-020.md
@@ -1,6 +1,6 @@
 # AlicIA - Pacote de PR (MVP-018, MVP-019, MVP-020)
 
-Data de referencia: 2026-02-17
+Data de referencia: 2026-02-18
 Branch atual: `neuromancer`
 
 ## Escopo consolidado
@@ -10,7 +10,7 @@ Branch atual: `neuromancer`
   - `policy_approval_scenarios`
   - `e2e_flow`
 2. `ALICIA-MVP-019`:
-- testes E2E do fluxo principal (caso feliz e caso negacao/expiracao) no `codex-alicia-ui`.
+- testes E2E do fluxo principal (caso feliz, negacao/expiracao e cancelamento seguro) no `codex-alicia-ui`.
 3. `ALICIA-MVP-020`:
 - guia operacional de instalacao (3 SO), troubleshooting e checklist pre-release.
 
@@ -26,8 +26,9 @@ Branch atual: `neuromancer`
 1. `cargo test -p codex-alicia-core -p codex-alicia-adapters -p codex-alicia-ui`
 2. `cargo test -p codex-alicia-ui e2e_happy_path_approval_execution_and_audit -- --exact`
 3. `cargo test -p codex-alicia-ui e2e_denied_and_expired_blocked_audit -- --exact`
-4. `cargo fmt -- --config imports_granularity=Item`
-5. `cargo clippy --fix --all-features --tests --allow-dirty -p codex-alicia-ui`
+4. `cargo test -p codex-alicia-ui e2e_safe_cancel_persists_final_audit_state -- --exact`
+5. `cargo fmt -- --config imports_granularity=Item`
+6. `cargo clippy --fix --all-features --tests --allow-dirty -p codex-alicia-ui`
 
 ## Passos para fechamento do PR
 
