docs(alicia): sync PR #13 CI evidence and residual-risk decision

--- a/Alicia/13-pr-mvp-018-020.md
+++ b/Alicia/13-pr-mvp-018-020.md
@@ -96,7 +96,7 @@ git push origin neuromancer
 
 ## Status atual de fechamento
 1. `ALICIA-MVP-019` e smoke local: evidenciados.
-2. `ALICIA-MVP-018`: pendente de corrigir `Alicia Suite Minima - ubuntu-latest` (step `Test alicia-core`, exit code `101`) e rerodar `alicia-ci`.
+2. `ALICIA-MVP-018`: validado com `alicia-ci` 9/9 verde no PR atual.
 3. `ALICIA-MVP-020`: documentacao atualizada com comandos e smoke.
 4. Validacao de adapters com binarios reais (ciclo seguinte):
 - `codex` presente no host e respondendo `codex-cli 0.101.0` em `--version`.
@@ -133,8 +133,10 @@ cargo run -p codex-alicia-ui --bin codex-alicia-ui-app -- --session-id smoke-202
 ```
 
 ## Estado de PR no GitHub
-1. Nao existe PR aberto com `head=danielheringers:neuromancer` no momento.
-2. Enquanto nao houver PR, as evidencias ficam registradas neste pacote de release.
+1. PR aberto: `https://github.com/danielheringers/neuromancer/pull/13`
+2. Base: `main`
+3. Head: `neuromancer`
+4. Commit da rodada atual: `7f5064040e4f8c0d0c65d031e5e8e4262905148d`
 
 ## Validacao de adapters com binarios reais (ciclo tecnico)
 1. `codex` disponivel no host e validado com:
@@ -169,3 +171,21 @@ cargo run -p codex-alicia-ui --bin codex-alicia-ui-app -- --session-id smoke-202
 - workflow: `https://github.com/danielheringers/neuromancer/actions/runs/22136388040`
 - run_number: `14`
 - status no momento do registro: `queued` (fila de runners do repositório).
+
+## Revalidacao no PR atual (2026-02-18)
+1. Workflow run (`pull_request`): `https://github.com/danielheringers/neuromancer/actions/runs/22139722352`
+2. Run number: `16`
+3. Resultado final: `success` (9/9 jobs verdes)
+4. Jobs por matriz:
+- `Alicia Policy and Approval Scenarios - windows-latest`: `https://github.com/danielheringers/neuromancer/actions/runs/22139722352/job/64000552234`
+- `Alicia E2E Flow - macos-latest`: `https://github.com/danielheringers/neuromancer/actions/runs/22139722352/job/64000552256`
+- `Alicia E2E Flow - windows-latest`: `https://github.com/danielheringers/neuromancer/actions/runs/22139722352/job/64000552257`
+- `Alicia Policy and Approval Scenarios - ubuntu-latest`: `https://github.com/danielheringers/neuromancer/actions/runs/22139722352/job/64000552265`
+- `Alicia Suite Minima - ubuntu-latest`: `https://github.com/danielheringers/neuromancer/actions/runs/22139722352/job/64000552266`
+- `Alicia E2E Flow - ubuntu-latest`: `https://github.com/danielheringers/neuromancer/actions/runs/22139722352/job/64000552268`
+- `Alicia Suite Minima - macos-latest`: `https://github.com/danielheringers/neuromancer/actions/runs/22139722352/job/64000552280`
+- `Alicia Policy and Approval Scenarios - macos-latest`: `https://github.com/danielheringers/neuromancer/actions/runs/22139722352/job/64000552296`
+- `Alicia Suite Minima - windows-latest`: `https://github.com/danielheringers/neuromancer/actions/runs/22139722352/job/64000552310`
+5. Status de risco de adapter:
+- `claude-code --version` no host atual retorna `command not found`.
+- risco residual mantido: validar provider em host com binario real antes de release final.
