--- a/Alicia/13-pr-mvp-018-020.md
+++ b/Alicia/13-pr-mvp-018-020.md
@@ -136,7 +136,7 @@ cargo run -p codex-alicia-ui --bin codex-alicia-ui-app -- --session-id smoke-202
 1. PR aberto: `https://github.com/danielheringers/neuromancer/pull/13`
 2. Base: `main`
 3. Head: `neuromancer`
-4. Commit da rodada atual: `7f5064040e4f8c0d0c65d031e5e8e4262905148d`
+4. Commit da rodada atual: `e369a74f71bd25b6adad5a9efee1325de9e41e18`
 
 ## Validacao de adapters com binarios reais (ciclo tecnico)
 1. `codex` disponivel no host e validado com:
@@ -189,3 +189,23 @@ cargo run -p codex-alicia-ui --bin codex-alicia-ui-app -- --session-id smoke-202
 5. Status de risco de adapter:
 - `claude-code --version` no host atual retorna `command not found`.
 - risco residual mantido: validar provider em host com binario real antes de release final.
+
+## Revalidacao apos fix de intermitencia (2026-02-18)
+1. Commit com fix: `e369a74f71bd25b6adad5a9efee1325de9e41e18`
+2. Mudanca: estabilizacao do teste `start_pipe_session_emits_started_output_and_finished_events` em `codex-rs/alicia-core/src/session.rs`.
+3. Workflow run (`pull_request`): `https://github.com/danielheringers/neuromancer/actions/runs/22140345314`
+4. Run number: `19`
+5. Resultado final: `success` (9/9 jobs verdes)
+6. Jobs por matriz:
+- `Alicia E2E Flow - macos-latest`: `https://github.com/danielheringers/neuromancer/actions/runs/22140345314/job/64002696988`
+- `Alicia E2E Flow - ubuntu-latest`: `https://github.com/danielheringers/neuromancer/actions/runs/22140345314/job/64002696992`
+- `Alicia E2E Flow - windows-latest`: `https://github.com/danielheringers/neuromancer/actions/runs/22140345314/job/64002696924`
+- `Alicia Policy and Approval Scenarios - macos-latest`: `https://github.com/danielheringers/neuromancer/actions/runs/22140345314/job/64002697036`
+- `Alicia Policy and Approval Scenarios - ubuntu-latest`: `https://github.com/danielheringers/neuromancer/actions/runs/22140345314/job/64002697168`
+- `Alicia Policy and Approval Scenarios - windows-latest`: `https://github.com/danielheringers/neuromancer/actions/runs/22140345314/job/64002696899`
+- `Alicia Suite Minima - macos-latest`: `https://github.com/danielheringers/neuromancer/actions/runs/22140345314/job/64002697132`
+- `Alicia Suite Minima - ubuntu-latest`: `https://github.com/danielheringers/neuromancer/actions/runs/22140345314/job/64002697016`
+- `Alicia Suite Minima - windows-latest`: `https://github.com/danielheringers/neuromancer/actions/runs/22140345314/job/64002696947`
+
+## Notas de release da candidata
+1. Documento consolidado: `Alicia/15-notas-release-candidata-mvp-018-020.md`.
