alicia: add real claude-code smoke closure workflow

--- a/Alicia/13-pr-mvp-018-020.md
+++ b/Alicia/13-pr-mvp-018-020.md
@@ -190,6 +190,22 @@ cargo run -p codex-alicia-ui --bin codex-alicia-ui-app -- --session-id smoke-202
 - `claude-code --version` no host atual retorna `command not found`.
 - risco residual mantido: validar provider em host com binario real antes de release final.
 
+## Procedimento objetivo para fechar risco residual `claude-code`
+1. Executar em host de release com binario disponivel no PATH:
+```powershell
+claude-code --version
+cd codex-rs
+$env:ALICIA_REAL_PROVIDER_CLAUDE_CODE='1'
+$env:ALICIA_CLAUDE_CODE_BIN='claude-code'
+cargo test -p codex-alicia-adapters real_provider_claude_code_smoke -- --exact --nocapture
+```
+2. Evidencia de aceite esperada:
+- `test real_provider_claude_code_smoke ... ok`
+- comando `claude-code --version` retornando versao sem erro.
+3. Origem do smoke test:
+- `codex-rs/alicia-adapters/tests/real_provider_smoke.rs`
+4. Apos executar no host alvo, atualizar este documento com o transcript resumido e remover o status de risco residual.
+
 ## Revalidacao apos fix de intermitencia (2026-02-18)
 1. Commit com fix: `e369a74f71bd25b6adad5a9efee1325de9e41e18`
 2. Mudanca: estabilizacao do teste `start_pipe_session_emits_started_output_and_finished_events` em `codex-rs/alicia-core/src/session.rs`.
