docs(alicia): add cross-platform claude-code validation runbook

--- a/Alicia/13-pr-mvp-018-020.md
+++ b/Alicia/13-pr-mvp-018-020.md
@@ -199,6 +199,11 @@ $env:ALICIA_REAL_PROVIDER_CLAUDE_CODE='1'
 $env:ALICIA_CLAUDE_CODE_BIN='claude-code'
 cargo test -p codex-alicia-adapters real_provider_claude_code_smoke -- --exact --nocapture
 ```
+```bash
+claude-code --version
+cd codex-rs
+ALICIA_REAL_PROVIDER_CLAUDE_CODE=1 ALICIA_CLAUDE_CODE_BIN=claude-code cargo test -p codex-alicia-adapters real_provider_claude_code_smoke -- --exact --nocapture
+```
 2. Evidencia de aceite esperada:
 - `test real_provider_claude_code_smoke ... ok`
 - comando `claude-code --version` retornando versao sem erro.
