alicia: close claude provider real-validation gap

--- a/Alicia/13-pr-mvp-018-020.md
+++ b/Alicia/13-pr-mvp-018-020.md
@@ -98,10 +98,10 @@ git push origin neuromancer
 1. `ALICIA-MVP-019` e smoke local: evidenciados.
 2. `ALICIA-MVP-018`: validado com `alicia-ci` 9/9 verde no PR atual.
 3. `ALICIA-MVP-020`: documentacao atualizada com comandos e smoke.
-4. Validacao de adapters com binarios reais (ciclo seguinte):
+4. Validacao de adapters com binarios reais (status atual):
 - `codex` presente no host e respondendo `codex-cli 0.101.0` em `--version`.
-- `codex-cli` dedicado e `claude-code` nao encontrados no host atual.
-- Risco residual: falta validar fluxo real do adapter `claude-code` ate instalar o binario.
+- provider Claude validado com binario `claude` (`claude --version` -> `2.1.45 (Claude Code)`).
+- smoke real do adapter `claude-code` aprovado no host atual.
 
 ## Revalidacao CI apos correcao (2026-02-18)
 1. Commit de correcao: `9e85c3b4a243fe84f5dd253cf261efecfc6dbde2`
@@ -142,7 +142,9 @@ cargo run -p codex-alicia-ui --bin codex-alicia-ui-app -- --session-id smoke-202
 1. `codex` disponivel no host e validado com:
 - `codex --version` -> `codex-cli 0.101.0`
 - `codex exec --help` -> retorno `0` com help completo
-2. `claude-code` nao encontrado no host atual (`command not found`), mantendo risco residual desse provider.
+2. `claude` disponivel no host e validado com:
+- `claude --version` -> `2.1.45 (Claude Code)`
+- `cargo test -p codex-alicia-adapters real_provider_claude_code_smoke -- --exact --nocapture` com `ALICIA_REAL_PROVIDER_CLAUDE_CODE=1` e `ALICIA_CLAUDE_CODE_BIN=claude` -> `ok`.
 
 ## Execucao complementar apos sync (2026-02-18)
 1. Branch `neuromancer` sincronizado com `main` e atualizado no remoto:
@@ -187,26 +189,27 @@ cargo run -p codex-alicia-ui --bin codex-alicia-ui-app -- --session-id smoke-202
 - `Alicia Policy and Approval Scenarios - macos-latest`: `https://github.com/danielheringers/neuromancer/actions/runs/22139722352/job/64000552296`
 - `Alicia Suite Minima - windows-latest`: `https://github.com/danielheringers/neuromancer/actions/runs/22139722352/job/64000552310`
 5. Status de risco de adapter:
-- `claude-code --version` no host atual retorna `command not found`.
-- risco residual mantido: validar provider em host com binario real antes de release final.
+- `claude --version` no host atual retorna `2.1.45 (Claude Code)`.
+- `cargo test -p codex-alicia-adapters real_provider_claude_code_smoke -- --exact --nocapture` passou com `ALICIA_REAL_PROVIDER_CLAUDE_CODE=1` e `ALICIA_CLAUDE_CODE_BIN=claude`.
+- risco residual de validacao real do provider fechado para este host (2026-02-18).
 
-## Procedimento objetivo para fechar risco residual `claude-code`
+## Procedimento objetivo de validacao real do provider `claude-code`
 1. Executar em host de release com binario disponivel no PATH:
 ```powershell
-claude-code --version
+claude --version
 cd codex-rs
 $env:ALICIA_REAL_PROVIDER_CLAUDE_CODE='1'
-$env:ALICIA_CLAUDE_CODE_BIN='claude-code'
+$env:ALICIA_CLAUDE_CODE_BIN='claude'
 cargo test -p codex-alicia-adapters real_provider_claude_code_smoke -- --exact --nocapture
 ```
 ```bash
-claude-code --version
+claude --version
 cd codex-rs
-ALICIA_REAL_PROVIDER_CLAUDE_CODE=1 ALICIA_CLAUDE_CODE_BIN=claude-code cargo test -p codex-alicia-adapters real_provider_claude_code_smoke -- --exact --nocapture
+ALICIA_REAL_PROVIDER_CLAUDE_CODE=1 ALICIA_CLAUDE_CODE_BIN=claude cargo test -p codex-alicia-adapters real_provider_claude_code_smoke -- --exact --nocapture
 ```
 2. Evidencia de aceite esperada:
 - `test real_provider_claude_code_smoke ... ok`
-- comando `claude-code --version` retornando versao sem erro.
+- comando `claude --version` retornando versao sem erro.
 3. Origem do smoke test:
 - `codex-rs/alicia-adapters/tests/real_provider_smoke.rs`
 4. Apos executar no host alvo, atualizar este documento com o transcript resumido e remover o status de risco residual.
