alicia-adapters: autodetect claude binary in real smoke

--- a/Alicia/13-pr-mvp-018-020.md
+++ b/Alicia/13-pr-mvp-018-020.md
@@ -199,20 +199,21 @@ cargo run -p codex-alicia-ui --bin codex-alicia-ui-app -- --session-id smoke-202
 claude --version
 cd codex-rs
 $env:ALICIA_REAL_PROVIDER_CLAUDE_CODE='1'
-$env:ALICIA_CLAUDE_CODE_BIN='claude'
 cargo test -p codex-alicia-adapters real_provider_claude_code_smoke -- --exact --nocapture
 ```
 ```bash
 claude --version
 cd codex-rs
-ALICIA_REAL_PROVIDER_CLAUDE_CODE=1 ALICIA_CLAUDE_CODE_BIN=claude cargo test -p codex-alicia-adapters real_provider_claude_code_smoke -- --exact --nocapture
+ALICIA_REAL_PROVIDER_CLAUDE_CODE=1 cargo test -p codex-alicia-adapters real_provider_claude_code_smoke -- --exact --nocapture
 ```
-2. Evidencia de aceite esperada:
+2. Observacao operacional:
+- o smoke autodetecta `claude` e `claude-code` se `ALICIA_CLAUDE_CODE_BIN` nao estiver definido; usar essa env var apenas para forcar um executavel especifico.
+3. Evidencia de aceite esperada:
 - `test real_provider_claude_code_smoke ... ok`
 - comando `claude --version` retornando versao sem erro.
-3. Origem do smoke test:
+4. Origem do smoke test:
 - `codex-rs/alicia-adapters/tests/real_provider_smoke.rs`
-4. Apos executar no host alvo, atualizar este documento com o transcript resumido e remover o status de risco residual.
+5. Apos executar no host alvo, atualizar este documento com o transcript resumido e remover o status de risco residual.
 
 ## Revalidacao apos fix de intermitencia (2026-02-18)
 1. Commit com fix: `e369a74f71bd25b6adad5a9efee1325de9e41e18`
