docs(alicia): record latest alicia-ci green evidence

--- a/Alicia/13-pr-mvp-018-020.md
+++ b/Alicia/13-pr-mvp-018-020.md
@@ -232,5 +232,22 @@ ALICIA_REAL_PROVIDER_CLAUDE_CODE=1 cargo test -p codex-alicia-adapters real_prov
 - `Alicia Suite Minima - ubuntu-latest`: `https://github.com/danielheringers/neuromancer/actions/runs/22140345314/job/64002697016`
 - `Alicia Suite Minima - windows-latest`: `https://github.com/danielheringers/neuromancer/actions/runs/22140345314/job/64002696947`
 
+## Revalidacao apos hardening do smoke real Claude (2026-02-18)
+1. Commit: `3c38be3de1de7795ed381cfbc56f653fca2b70ba`
+2. Mudanca: autodetect de binario `claude`/`claude-code` no smoke real do provider (`codex-rs/alicia-adapters/tests/real_provider_smoke.rs`).
+3. Workflow run (`pull_request`): `https://github.com/danielheringers/neuromancer/actions/runs/22144213751`
+4. Run number: `32`
+5. Resultado final: `success` (9/9 jobs verdes)
+6. Jobs por matriz:
+- `Alicia E2E Flow - macos-latest`: `https://github.com/danielheringers/neuromancer/actions/runs/22144213751/job/64016562897`
+- `Alicia E2E Flow - ubuntu-latest`: `https://github.com/danielheringers/neuromancer/actions/runs/22144213751/job/64016562665`
+- `Alicia E2E Flow - windows-latest`: `https://github.com/danielheringers/neuromancer/actions/runs/22144213751/job/64016562919`
+- `Alicia Policy and Approval Scenarios - macos-latest`: `https://github.com/danielheringers/neuromancer/actions/runs/22144213751/job/64016562711`
+- `Alicia Policy and Approval Scenarios - ubuntu-latest`: `https://github.com/danielheringers/neuromancer/actions/runs/22144213751/job/64016562619`
+- `Alicia Policy and Approval Scenarios - windows-latest`: `https://github.com/danielheringers/neuromancer/actions/runs/22144213751/job/64016562577`
+- `Alicia Suite Minima - macos-latest`: `https://github.com/danielheringers/neuromancer/actions/runs/22144213751/job/64016563040`
+- `Alicia Suite Minima - ubuntu-latest`: `https://github.com/danielheringers/neuromancer/actions/runs/22144213751/job/64016562707`
+- `Alicia Suite Minima - windows-latest`: `https://github.com/danielheringers/neuromancer/actions/runs/22144213751/job/64016563004`
+
 ## Notas de release da candidata
 1. Documento consolidado: `Alicia/15-notas-release-candidata-mvp-018-020.md`.
